<?xml version="1.0"?>
<package format="3">
  <name>mcl_3dl</name>
  <version>0.2.5</version>
  <description>3-D/6-DOF localization for mobile robots with 3-D LIDAR(s)</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <!-- <depend>diagnostic_updater</depend> -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
<!--
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

 -->
  <depend>mcl_3dl_msgs</depend>

  <depend>eigen</depend>
  <depend>libpcl-all-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
